# proXiPT

./: .gitignore  README.md  README_KR.md  README_ko.md  config.yaml  pyproject.toml  requirements.txt  start.bat  start.sh  start_debug.bat  test_headless.py
src/proxipt/: __init__.py  config.py  main.py
src/proxipt/api/: schemas.py
src/proxipt/api/routes/: admin.py  chat.py  models.py
src/proxipt/api/static/: index.html
src/proxipt/api/static/css/: styles.css
src/proxipt/api/static/js/: app.js
src/proxipt/core/: browser_pool.py  message_compiler.py  response_parser.py  router.py  token_estimator.py
src/proxipt/providers/: aistudio.py  base.py  chatglm.py  chatgpt.py  claude.py  copilot.py  coze.py  custom.py  deepseek.py  doubao.py  duck_ai.py  gemini.py  groq_playground.py  huggingchat.py  kimi.py  metaai.py  mistral_lechat.py  openrouter.py  perplexity.py  pi.py  poe.py  qwen.py  yichat.py  you.py
src/proxipt/utils/: logger.py
