[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxipt"
version = "0.1.0"
description = "Free LLM Chat → OpenAI-Compatible API Server via Playwright"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "playwright>=1.49.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "ruamel.yaml>=0.18.6",
    "tiktoken>=0.8.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[project.scripts]
proxipt = "proxipt.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/proxipt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
